tools/compiler/OMRStatistics/doc/Errors Compiling OpenJ9 with Clang/z/1
(Arch: Z): Compiling /home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/omr/compiler/optimizer/VPHandlersCommon.cpp
/home/sam/3openj9/openj9-openjdk-jdk9/build/linux-x86_64-normal-server-release/vm/omr/compiler/optimizer/VPHandlersCommon.cpp:401:1: error: static_assert failed "constraintHandlers is not the correct size"
static_assert(TR::NumIlOps ==
^             ~~~~~~~~~~~~~~~
1 error generated.